--- a/README
+++ b/README
@@ -1,5 +1,11 @@
-This is the public repository for proximia.fi.
+# This is the public repository for proximia.fi. #
 Any code here is licensed under GPL/LGPL.
+
+## Projects: ##
+### Can bootloader ###
+### Libraries ###
+### Can Bridge CAN-USB converter ###
+### Schematics ###
 
 For more information, please browse the project documentation.
 Documentation can be generated from the sources with Doxygen.
